argocd/base/inventory-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
  labels:
    app: inventory-service
spec:
  selector:
    app: inventory-service
  ports:
    - port: 8083
      targetPort: 8083
  type: ClusterIP
